// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Teste de componentes Página de Cidadão renderizada corretamente 1`] = `
<div
  className="MuiContainer-root MuiContainer-maxWidthLg css-1l0w7oi-MuiContainer-root"
>
  <h5
    className="MuiTypography-root MuiTypography-h5 css-grbqxd-MuiTypography-root"
  >
    Seja bem-vindo(a)
  </h5>
  <div
    style={
      {
        "borderBottom": "1px solid #9E9E9E",
        "height": "200px",
        "marginTop": "-50px",
        "overflowY": "hidden",
        "paddingTop": "60px",
      }
    }
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-polf8z-MuiPaper-root-MuiCard-root"
    >
      <div
        className="MuiBox-root css-0"
      >
        <div
          className="MuiCardHeader-root css-1d6w13i-MuiCardHeader-root"
        >
          <div
            className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h2
              className="MuiTypography-root MuiTypography-h2 css-wshchc-MuiTypography-root"
            >
              Programação redução da Pobreza
            </h2>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root css-107y2qe-MuiGrid-root"
      >
        <h6
          className="MuiTypography-root MuiTypography-h6 css-25dv9f-MuiTypography-root"
        >
          A situção do seu cadastro é
        </h6>
        <h6
          className="MuiTypography-root MuiTypography-h6 css-1v12ax1-MuiTypography-root"
        />
      </div>
    </div>
  </div>
  <h4
    className="MuiTypography-root MuiTypography-h4 css-1fu4c7j-MuiTypography-root"
  >
    Serviços ofertados
  </h4>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-4 MuiGrid-grid-md-3 css-1vm8tgf-MuiGrid-root"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1ckkhpr-MuiPaper-root-MuiCard-root"
      >
        <div
          className="MuiCardContent-root css-x7w97l-MuiCardContent-root"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="SchoolIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3 1 9l11 6 9-4.91V17h2V9L12 3z"
            />
          </svg>
          <h6
            className="MuiTypography-root MuiTypography-h6 css-1ywovuw-MuiTypography-root"
          >
            Cursos
          </h6>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-4 MuiGrid-grid-md-3 css-1vm8tgf-MuiGrid-root"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1ckkhpr-MuiPaper-root-MuiCard-root"
      >
        <div
          className="MuiCardContent-root css-x7w97l-MuiCardContent-root"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="RocketLaunchIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9.19 6.35c-2.04 2.29-3.44 5.58-3.57 5.89L2 10.69l4.05-4.05c.47-.47 1.15-.68 1.81-.55l1.33.26zM11.17 17s3.74-1.55 5.89-3.7c5.4-5.4 4.5-9.62 4.21-10.57-.95-.3-5.17-1.19-10.57 4.21C8.55 9.09 7 12.83 7 12.83L11.17 17zm6.48-2.19c-2.29 2.04-5.58 3.44-5.89 3.57L13.31 22l4.05-4.05c.47-.47.68-1.15.55-1.81l-.26-1.33zM9 18c0 .83-.34 1.58-.88 2.12C6.94 21.3 2 22 2 22s.7-4.94 1.88-6.12C4.42 15.34 5.17 15 6 15c1.66 0 3 1.34 3 3zm4-9c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2-2-.9-2-2z"
            />
          </svg>
          <h6
            className="MuiTypography-root MuiTypography-h6 css-1ywovuw-MuiTypography-root"
          >
            Empreendedorismo
          </h6>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-4 MuiGrid-grid-md-3 css-1vm8tgf-MuiGrid-root"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1ckkhpr-MuiPaper-root-MuiCard-root"
      >
        <div
          className="MuiCardContent-root css-x7w97l-MuiCardContent-root"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="AttachMoneyIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"
            />
          </svg>
          <h6
            className="MuiTypography-root MuiTypography-h6 css-1ywovuw-MuiTypography-root"
          >
            Microcrédito
          </h6>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-4 MuiGrid-grid-md-3 css-1vm8tgf-MuiGrid-root"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1ckkhpr-MuiPaper-root-MuiCard-root"
      >
        <div
          className="MuiCardContent-root css-x7w97l-MuiCardContent-root"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="BusinessCenterIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 16v-1H3.01L3 19c0 1.11.89 2 2 2h14c1.11 0 2-.89 2-2v-4h-7v1h-4zm10-9h-4.01V5l-2-2h-4l-2 2v2H4c-1.1 0-2 .9-2 2v3c0 1.11.89 2 2 2h6v-2h4v2h6c1.1 0 2-.9 2-2V9c0-1.1-.9-2-2-2zm-6 0h-4V5h4v2z"
            />
          </svg>
          <h6
            className="MuiTypography-root MuiTypography-h6 css-1ywovuw-MuiTypography-root"
          >
            Trabalho
          </h6>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-4 MuiGrid-grid-md-3 css-1vm8tgf-MuiGrid-root"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1ckkhpr-MuiPaper-root-MuiCard-root"
      >
        <div
          className="MuiCardContent-root css-x7w97l-MuiCardContent-root"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ManageAccountsIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="10"
              cy="8"
              r="4"
            />
            <path
              d="M10.67 13.02c-.22-.01-.44-.02-.67-.02-2.42 0-4.68.67-6.61 1.82-.88.52-1.39 1.5-1.39 2.53V20h9.26c-.79-1.13-1.26-2.51-1.26-4 0-1.07.25-2.07.67-2.98zM20.75 16c0-.22-.03-.42-.06-.63l1.14-1.01-1-1.73-1.45.49c-.32-.27-.68-.48-1.08-.63L18 11h-2l-.3 1.49c-.4.15-.76.36-1.08.63l-1.45-.49-1 1.73 1.14 1.01c-.03.21-.06.41-.06.63s.03.42.06.63l-1.14 1.01 1 1.73 1.45-.49c.32.27.68.48 1.08.63L16 21h2l.3-1.49c.4-.15.76-.36 1.08-.63l1.45.49 1-1.73-1.14-1.01c.03-.21.06-.41.06-.63zM17 18c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
            />
          </svg>
          <h6
            className="MuiTypography-root MuiTypography-h6 css-1ywovuw-MuiTypography-root"
          >
            Estágios
          </h6>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-4 MuiGrid-grid-md-3 css-1vm8tgf-MuiGrid-root"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1ckkhpr-MuiPaper-root-MuiCard-root"
      >
        <div
          className="MuiCardContent-root css-x7w97l-MuiCardContent-root"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="PersonAddIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm-9-2V7H4v3H1v2h3v3h2v-3h3v-2H6zm9 4c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
            />
          </svg>
          <h6
            className="MuiTypography-root MuiTypography-h6 css-1ywovuw-MuiTypography-root"
          >
            Jovem Aprendiz
          </h6>
        </div>
      </div>
    </div>
  </div>
  <h4
    className="MuiTypography-root MuiTypography-h4 css-1fu4c7j-MuiTypography-root"
  >
    Serviços disponiveis
  </h4>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1fyyp8j-MuiGrid-root"
    >
      <div
        style={
          {
            "borderBottom": "1px solid #9E9E9E",
            "height": "200px",
            "marginTop": "-50px",
            "overflowY": "hidden",
            "paddingTop": "60px",
          }
        }
      >
        <div
          className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-s8yuy2-MuiPaper-root-MuiCard-root"
        >
          <div
            className="MuiBox-root css-0"
          >
            <div
              className="MuiCardHeader-root css-1ap2llq-MuiCardHeader-root"
            >
              <div
                className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
              >
                <h2
                  className="MuiTypography-root MuiTypography-h2 css-wshchc-MuiTypography-root"
                />
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root css-1wtt2ww-MuiGrid-root"
          >
            <p
              className="MuiTypography-root MuiTypography-body1 css-dbpnkx-MuiTypography-root"
            >
              Vagas de emprego
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1hljre3-MuiTypography-root"
            >
              Disponiveis em diversas áreas
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1fyyp8j-MuiGrid-root"
    >
      <div
        style={
          {
            "borderBottom": "1px solid #9E9E9E",
            "height": "200px",
            "marginTop": "-50px",
            "overflowY": "hidden",
            "paddingTop": "60px",
          }
        }
      >
        <div
          className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-s8yuy2-MuiPaper-root-MuiCard-root"
        >
          <div
            className="MuiBox-root css-0"
          >
            <div
              className="MuiCardHeader-root css-1ap2llq-MuiCardHeader-root"
            >
              <div
                className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
              >
                <h2
                  className="MuiTypography-root MuiTypography-h2 css-wshchc-MuiTypography-root"
                />
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root css-1wtt2ww-MuiGrid-root"
          >
            <p
              className="MuiTypography-root MuiTypography-body1 css-dbpnkx-MuiTypography-root"
            >
              Vagas de curso
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1hljre3-MuiTypography-root"
            >
              Disponiveis em diversas áreas
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root css-fkk637"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-testid="InfoIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
      />
    </svg>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1lh13dg-MuiTypography-root"
    >
      No caso de dúvidas e/ou problemas, acesse
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1fxugtv-MuiTypography-root-MuiLink-root"
        href="/faq"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        Perguntas Frequentes
      </a>
      . Caso o problema persista, envie e-mail para redeprogredir.senisp@cidadania.gov.br
    </p>
  </div>
</div>
`;

exports[`Teste de componentes Página de FAQ 1`] = `
<div
  className="MuiContainer-root MuiContainer-maxWidthLg css-1l0w7oi-MuiContainer-root"
>
  <h4
    className="MuiTypography-root MuiTypography-h4 css-ywhdiz-MuiTypography-root"
  >
    Perguntas Frequentes - FAQ
  </h4>
  <div
    className="MuiBox-root css-v57q9y"
  >
    <h5
      className="MuiTypography-root MuiTypography-h5 css-1ntuugf-MuiTypography-root"
    >
      O que é o Programa Redução da Pobreza e o que ele oferece?
    </h5>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      O Programa Redução da Pobreza é um conjunto de ações destinadas a auxiliar as pessoas inscritas no Cadastro Único, preferencialmente aquelas com renda familiar de até ½ salário-mínimo por pessoa. Por meio do site do Programa Redução da Pobreza, você encontra cursos gratuitos de qualificação profissional nas modalidades presencial e de Ensino à Distância (EaD), possibilidade de acesso ao microcrédito produtivo orientado para investir no seu próprio negócio e também pode no próprio site, elaborar um currículo e se candidatar a vagas de emprego.
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      Se você já estiver no Cadastro Único e quiser participar do Programa Redução da Pobreza, acesse o site clicando
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1qx9wka-MuiTypography-root-MuiLink-root"
        href="https://www.gov.br/mds/pt-br/acoes-e-programas/programa-reducao-da-pobreza  "
        onBlur={[Function]}
        onFocus={[Function]}
      >
        aqui
      </a>
      e faça seu cadastro.
    </p>
  </div>
  <div
    className="MuiBox-root css-v57q9y"
  >
    <h5
      className="MuiTypography-root MuiTypography-h5 css-1ntuugf-MuiTypography-root"
    >
      Como faço meu cadastro no Portal Programa Redução da Pobreza?
    </h5>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      Para fazer o cadastro no Programa Redução da Pobreza, é necessário estar inscrito no Cadastro Único. Se você está inscrito no Cadastro Único, o seu CPF será identificado pelo sistema no momento que você estiver fazendo o seu cadastro no site Programa Redução da Pobreza. Para isso, acesse o site
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1qx9wka-MuiTypography-root-MuiLink-root"
        href="https://www.gov.br/mds/pt-br/acoes-e-programas/programa-reducao-da-pobreza"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        aqui
      </a>
      e clique nos botões Quero aprender, Quero empreender ou Quero emprego”. Ao acessar essa aba você é direcionado para a Conta de acesso única do Governo &lt;
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-k985qi-MuiTypography-root-MuiLink-root"
        href="http://www.acesso.gov.br/"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        acesso.gov.br/
      </a>
      &gt; para autenticar telefone e/ou e-mail preenchendo os dados solicitados. Depois desse cadastro o sistema irá informar se você está inscrito no Cadastro Único. Se você não estiver no Cadastro Único, procure o setor responsável pelo Cadastro Único em seu município, ou um Centro de Referência de Assistência Social (CRAS). Para fazer parte do Cadastro Único, é necessário ter renda mensal igual ou inferior a meio salário-mínimo por pessoa ou renda familiar mensal de até três salários mínimos.
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      O Programa Redução da Pobreza oferece oportunidades de qualificação, de emprego e de renda e promove a autonomia das pessoas inscritas no Cadastro Único.
    </p>
    <ol>
      <li>
        Acessar o site clicando
        <a
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1qx9wka-MuiTypography-root-MuiLink-root"
          href="https://www.gov.br/mds/pt-br/acoes-e-programas/programa-reducao-da-pobreza"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          aqui
        </a>
      </li>
      <li>
        Clicar em uma das opções
      </li>
      <div
        className="MuiBox-root css-r9ni7l"
      >
        <img
          src="<div>Imagem</div>"
          style={
            {
              "width": 700,
            }
          }
        />
      </div>
      <li>
        Informar o seu CPF, selecionar estado e acionar a opção “Não sou robô”
      </li>
      <div
        className="MuiBox-root css-159z2lj"
      >
        <img
          src="<div>Imagem</div>"
          style={
            {
              "width": 400,
            }
          }
        />
      </div>
      <li>
        Acionar opção (GOV.BR)
      </li>
      <div
        className="MuiBox-root css-159z2lj"
      >
        <img
          src="<div>Imagem</div>"
        />
      </div>
      <li>
        Informar CPF e senha no GOV.BR e caso usuário não tenha cadastro no GOV.BR deverá realizar um cadastro; 
      </li>
      <div
        className="MuiBox-root css-4kdwyk"
      >
        <img
          src="<div>Imagem</div>"
          style={
            {
              "width": 600,
            }
          }
        />
      </div>
      <li>
        Validar e-mail e/ou número de telefone;
      </li>
      <div
        className="MuiBox-root css-r9ni7l"
      >
        <img
          src="<div>Imagem</div>"
          style={
            {
              "width": 700,
            }
          }
        />
      </div>
      <li>
        Aceitar termo de acesso ao PROGRAMA REDUÇÃO DA POBREZA.
      </li>
    </ol>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      OBS: Em caso de o usuário ter esquecido o e-mail cadastrado ele deve seguir as seguintes instruções, retirado do site dúvidas frequentes do GOV.BR clicando no
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1fxugtv-MuiTypography-root-MuiLink-root"
        href="https://faq-login-unico.servicos.gov.br/en/latest/_perguntasdafaq/naotenhoacessoaoemailcadastradonologin.html"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        link
      </a>
      .
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      Para alterar o e-mail cadastrado, a Administração Pública precisa ter certeza de que você é você mesmo. Há diferentes modos de fazer isso:
    </p>
    <ul>
      <li>
        Validação facial no aplicativo gov.br (para quem possui carteira de motorista – CNH ou Título de Eleitor com biometria cadastrada - Tribunal Superior Eleitoral)
      </li>
      <li>
        Utilização de internet banking (para quem possui conta em um dos seguintes bancos: Banco do Brasil, Banrisul, Banese, Bradesco, Caixa Econômica Federal, Itaú, Santander ou Sicoob)
      </li>
      <li>
        Utilização do autoatendimento dos Bancos Credenciados
      </li>
    </ul>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      Caso não se encaixe em nenhuma dessas situações, preencha o formulário Como Podemos te ajudar? com as informações:
    </p>
    <ol>
      <li>
        Preencher no campo assunto: Alteração do e-mail por solicitação do cidadão
      </li>
      <li>
        Preencher o conteúdo com as informações:
        <ul>
          <li>
            Serviço que deseja acessar com Login Único
          </li>
          <li>
            E-mail para alteração;
          </li>
          <li>
            Anexar arquivo com o Documento de Identificação e autofotografia de seu rosto, segurando o documento original com foto mais recente possível para checagem;
          </li>
          <li>
            Seguinte texto: Eu, nome do cidadão, portador do CPF, CPF do cidadão , autorizo o Ministério da Gestão e da Inovação em Serviços Públicos a alterar meus dados cadastrais da plataforma de autenticação Login Único (gov.br). Cidade residência do cidadão , data do preenchimento da autorização.
          </li>
        </ul>
      </li>
    </ol>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      Logo que o Ministério da Gestão e da Inovação em Serviços Públicos receber a solicitação, será realizada a análise de segurança e confirmação será encaminhada para email solicitado para alteração. Ausência das informações acima impossibilita análise e retorno.
    </p>
  </div>
  <div
    className="MuiBox-root css-v57q9y"
  >
    <h5
      className="MuiTypography-root MuiTypography-h5 css-1ntuugf-MuiTypography-root"
    >
      Eu quero trabalhar/ Quero um emprego. Como o Programa Redução da Pobreza pode me ajudar?
    </h5>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      Primeiramente, você deve se cadastrar no Portal Programa Redução da Pobreza. Para isso, acesse o site clicando
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1qx9wka-MuiTypography-root-MuiLink-root"
        href="https://www.gov.br/mds/pt-br/acoes-e-programas/programa-reducao-da-pobreza  "
        onBlur={[Function]}
        onFocus={[Function]}
      >
        aqui
      </a>
      e clique em um dos botões 
      <b>
        QUERO APRENDER, QUERO EMPREENDER, QUERO EMPREGO
      </b>
      . Ao acessar essa aba você será direcionado para a Conta de acesso única do Governo &lt;
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-k985qi-MuiTypography-root-MuiLink-root"
        href="https://www.gov.br/mds/pt-br/acoes-e-programas/programa-reducao-da-pobreza"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        acesso.gov.br/
      </a>
      &gt; para autenticar telefone e/ou e-mail preenchendo os dados solicitados. IMPORTANTE! Para se cadastrar no Programa Redução da Pobreza é necessário estar inscrito no Cadastro Único. Ao preencher as informações solicitadas, será possível se candidatar a vagas de emprego, de estágio ou de jovem aprendiz em sua região, de acordo com o seu perfil profissional. Após o cadastramento inicial, clique no botão 
      <b>
        “Vagas de Trabalho”
      </b>
      , depois em 
      <b>
        “Meu Currículo”
      </b>
      .
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      No Portal Programa Redução da Pobreza você poderá:
    </p>
    <ul>
      <li>
        Criar um currículo para você;
      </li>
      <li>
        Enviar seu currículo diretamente a empresas ofertantes de vagas de trabalho (se for uma vaga cadastrada diretamente pela empresa) ou acessar plataformas online parceiras do Programa Redução da Pobreza para se candidatar a uma vaga;
      </li>
      <li>
        Verificar se há oportunidades de trabalho em sua região;
      </li>
      <li>
        Verificar se alguma oportunidade de trabalho corresponde ao seu perfil profissional;
      </li>
      <li>
        Gravar seu currículo em formato PDF;
      </li>
      <li>
        Realizar a impressão do currículo;
      </li>
      <li>
        Se inscrever e participar de cursos presenciais e à distância (EaD), gratuitos;
      </li>
    </ul>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      Há cada vez mais empresas divulgando oportunidades de trabalho no Portal Programa Redução da Pobreza. A utilização dessa ferramenta por empresas é resultado da articulação dos poderes públicos do seu município, juntamente com o Ministério do Desenvolvimento e Assistência Social, Família e combate à Fome.
    </p>
  </div>
  <div
    className="MuiBox-root css-v57q9y"
  >
    <h5
      className="MuiTypography-root MuiTypography-h5 css-1ntuugf-MuiTypography-root"
    >
      Já estou empregado(a). Posso me cadastrar no Programa Redução da Pobreza?
    </h5>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      Sim! Mesmo se você estiver empregado(a), é possível se cadastrar no portal do Programa Redução da Pobreza para ter acesso a vagas de emprego, estágio ou Jovem Aprendiz, cursos de qualificação profissional e empreendedorismo na sua região.
    </p>
  </div>
  <div
    className="MuiBox-root css-v57q9y"
  >
    <h5
      className="MuiTypography-root MuiTypography-h5 css-1ntuugf-MuiTypography-root"
    >
      Como posso atualizar as informações do meu currículo?
    </h5>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      Para atualizar seu currículo, entre no site clicando
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1fxugtv-MuiTypography-root-MuiLink-root"
        href="https://www.gov.br/mds/pt-br/acoes-e-programas/programa-reducao-da-pobreza  "
        onBlur={[Function]}
        onFocus={[Function]}
      >
        aqui
      </a>
      , clique nos botões QUERO APRENDER, QUERO EMPREENDER, QUERO EMPREGO. Depois é só inserir as informações solicitadas para acessar o Portal. Em seguida, na coluna à esquerda, clique em “
      <b>
        Vagas de Trabalho
      </b>
      ”, depois em “
      <b>
        Meu Currículo
      </b>
      ” e em seguida, na parte superior da tela, clique em “
      <b>
        Alterar Informações
      </b>
      ”. Depois que fizer as alterações ou atualizações, clique em “
      <b>
        salvar
      </b>
      ”.
    </p>
  </div>
  <div
    className="MuiBox-root css-v57q9y"
  >
    <h5
      className="MuiTypography-root MuiTypography-h5 css-1ntuugf-MuiTypography-root"
    >
      Como é feita a seleção de vagas?
    </h5>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      As empresas e instituições parceiras do Programa Redução da Pobreza podem ofertar vagas de trabalho (na forma de contrato de emprego, estágio ou jovem aprendiz) e vagas de cursos gratuitos de qualificação. O candidato a uma vaga de emprego, estágio ou Jovem Aprendiz, ao acessar o Portal Programa Redução da Pobreza clicando
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1fxugtv-MuiTypography-root-MuiLink-root"
        href="https://www.gov.br/mds/pt-br/acoes-e-programas/programa-reducao-da-pobreza  "
        onBlur={[Function]}
        onFocus={[Function]}
      >
        aqui
      </a>
      , pode visualizar oportunidades de trabalho e cursos disponíveis em sua região; e, se já tiver um currículo cadastrado, pode manifestar interesse por uma vaga anunciada, ou pode ser contatado diretamente pela empresa para uma entrevista, mesmo sem ter manifestado o interesse na vaga.
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      Vale lembrar que nenhuma vaga de emprego, estágio ou Jovem Aprendiz é exclusiva para o público do Programa Redução da Pobreza. Assim, o candidato participará de processo seletivo e a empresa não é obrigada a contratar o público do Programa Redução da Pobreza.
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      Muitos trabalhadores já foram contratados por empresas que buscaram candidatos no Portal Programa Redução da Pobreza.
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      O Ministério do Desenvolvimento e Assistência Social, Família e combate à Fome não se responsabiliza pela contratação em qualquer que seja a modalidade, em nenhuma fase. O Programa Redução da Pobreza opera como um mediador entre as empresas ofertantes de vaga de trabalho e trabalhadores à procura de oportunidades de trabalho.
    </p>
  </div>
  <div
    className="MuiBox-root css-v57q9y"
  >
    <h5
      className="MuiTypography-root MuiTypography-h5 css-1ntuugf-MuiTypography-root"
    >
      Quais são as ações de Qualificação no Programa Redução da Pobreza?
    </h5>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      A Qualificação compreende cursos de:
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      a). Educação Financeira; esta ação está disponível no Portal Capacitação MDS:
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1fxugtv-MuiTypography-root-MuiLink-root"
        href="https://novoead.cidadania.gov.br/index  "
        onBlur={[Function]}
        onFocus={[Function]}
      >
        novoead.cidadania.gov.br/index
      </a>
      ;
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      b). Inclusão Digital;
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      c). Cursos disponibilizados pelos parceiros em diversas áreas de conhecimento;
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      d). Cursos do sistema S.
    </p>
  </div>
  <div
    className="MuiBox-root css-v57q9y"
  >
    <h5
      className="MuiTypography-root MuiTypography-h5 css-1ntuugf-MuiTypography-root"
    >
      Do que se trata a área de Educação Financeira?
    </h5>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      O interessado nesta formação poderá acessar dois ambientes para a oferta deste curso:
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      <b>
        Cursos de Gestão de Finanças Pessoais e Educação Financeira nas Escolas
      </b>
      , que já está disponibilizado no Portal Programa Redução da Pobreza e o interessado poderá acessar seguindo os passos abaixo:
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      Entre no site
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-cuw6m2-MuiTypography-root-MuiLink-root"
        href="https://www.gov.br/mds/pt-br/acoes-e-programas/programa-reducao-da-pobreza  "
        onBlur={[Function]}
        onFocus={[Function]}
      >
        aqui
      </a>
      ;
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      Clique no botão QUERO APRENDER;
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      Na plataforma do Programa Redução da Pobreza clique em “Cursos”. Você verá na tela uma lista de oferta de cursos gratuitos em várias áreas de conhecimento. O curso identificado está nas trilhas de cursos ofertados, onde há os cursos de Gestão de Finanças Pessoais e Educação Financeira nas Escolas.
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      <b>
        Curso EaD Educação Financeira para Empreendedores Populares
      </b>
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      Ofertado pelo portal capacitação MDS:
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1qx9wka-MuiTypography-root-MuiLink-root"
        href="https://novoead.cidadania.gov.br/admin/selection/inforequest/312668"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        novoead.cidadania.gov.br/admin/selection/inforequest/312668
      </a>
    </p>
  </div>
  <div
    className="MuiBox-root css-v57q9y"
  >
    <h5
      className="MuiTypography-root MuiTypography-h5 css-1ntuugf-MuiTypography-root"
    >
      Gostaria de fazer um curso no Programa Redução da Pobreza, mas não consigo acessar a plataforma porque não tenho computador. O que faço?
    </h5>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      O Programa Redução da Pobreza é uma plataforma digital e que, necessariamente, precisa ser acessada por meio eletrônico. Orientamos que recorra ao CRAS mais próximo de seu domicílio para verificar possíveis cursos ofertados on-line ou presenciais em sua região. Um dispositivo com internet é necessário não só para realizar as inscrições, mas também para fazer o curso propriamente dito.
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      O cidadão deve, necessariamente, estar inscrito no Cadastro Único Para Programas Sociais do Governo Federal, requisito obrigatório para acessar o Programa Redução da Pobreza.
    </p>
  </div>
  <div
    className="MuiBox-root css-v57q9y"
  >
    <h5
      className="MuiTypography-root MuiTypography-h5 css-1ntuugf-MuiTypography-root"
    >
      Se eu participar do Programa Redução da Pobreza e minha renda aumentar, eu perco o benefício do Bolsa Família?
    </h5>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      Não, você não deixará de receber o Bolsa Família ao participar do Programa Redução da Pobreza
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1no9ono-MuiTypography-root"
    >
      Importante esclarecer que o Programa Bolsa Família possui regras de funcionamento que não estão vinculadas com o Programa Redução da Pobreza. O Programa Bolsa Família verifica a renda familiar por meio de entrevista realizada no CRAS quando da atualização do Cadastro Único da família. Portanto, um aumento de renda, sobretudo aquela advinda de atividades informais ou que variam de um mês para o outro, não implicará a perda do benefício do Programa Bolsa Família.
    </p>
  </div>
</div>
`;

exports[`Teste de componentes Página de Parceiro renderizada corretamente 1`] = `
<div
  className="MuiContainer-root MuiContainer-maxWidthLg css-1l0w7oi-MuiContainer-root"
>
  <h5
    className="MuiTypography-root MuiTypography-h5 css-grbqxd-MuiTypography-root"
  >
    Seja bem-vindo(a)
  </h5>
  <div
    style={
      {
        "borderBottom": "1px solid #9E9E9E",
        "height": "200px",
        "marginTop": "-50px",
        "overflowY": "hidden",
        "paddingTop": "60px",
      }
    }
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-polf8z-MuiPaper-root-MuiCard-root"
    >
      <div
        className="MuiBox-root css-0"
      >
        <div
          className="MuiCardHeader-root css-1d6w13i-MuiCardHeader-root"
        >
          <div
            className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h2
              className="MuiTypography-root MuiTypography-h2 css-wshchc-MuiTypography-root"
            >
              Rede de Parceiros da Inclusão Socioeconomica
            </h2>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root css-107y2qe-MuiGrid-root"
      >
        <h6
          className="MuiTypography-root MuiTypography-h6 css-25dv9f-MuiTypography-root"
        >
          A situção do seu cadastro é
        </h6>
        <h6
          className="MuiTypography-root MuiTypography-h6 css-1v12ax1-MuiTypography-root"
        />
      </div>
    </div>
  </div>
  <h4
    className="MuiTypography-root MuiTypography-h4 css-1fu4c7j-MuiTypography-root"
  >
    Serviços ofertados
  </h4>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-4 MuiGrid-grid-md-3 css-1vm8tgf-MuiGrid-root"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1ckkhpr-MuiPaper-root-MuiCard-root"
      >
        <div
          className="MuiCardContent-root css-x7w97l-MuiCardContent-root"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="SchoolIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3 1 9l11 6 9-4.91V17h2V9L12 3z"
            />
          </svg>
          <h6
            className="MuiTypography-root MuiTypography-h6 css-1ywovuw-MuiTypography-root"
          >
            Cursos
          </h6>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-4 MuiGrid-grid-md-3 css-1vm8tgf-MuiGrid-root"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1ckkhpr-MuiPaper-root-MuiCard-root"
      >
        <div
          className="MuiCardContent-root css-x7w97l-MuiCardContent-root"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="RocketLaunchIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9.19 6.35c-2.04 2.29-3.44 5.58-3.57 5.89L2 10.69l4.05-4.05c.47-.47 1.15-.68 1.81-.55l1.33.26zM11.17 17s3.74-1.55 5.89-3.7c5.4-5.4 4.5-9.62 4.21-10.57-.95-.3-5.17-1.19-10.57 4.21C8.55 9.09 7 12.83 7 12.83L11.17 17zm6.48-2.19c-2.29 2.04-5.58 3.44-5.89 3.57L13.31 22l4.05-4.05c.47-.47.68-1.15.55-1.81l-.26-1.33zM9 18c0 .83-.34 1.58-.88 2.12C6.94 21.3 2 22 2 22s.7-4.94 1.88-6.12C4.42 15.34 5.17 15 6 15c1.66 0 3 1.34 3 3zm4-9c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2-2-.9-2-2z"
            />
          </svg>
          <h6
            className="MuiTypography-root MuiTypography-h6 css-1ywovuw-MuiTypography-root"
          >
            Empreendedorismo
          </h6>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-4 MuiGrid-grid-md-3 css-1vm8tgf-MuiGrid-root"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1ckkhpr-MuiPaper-root-MuiCard-root"
      >
        <div
          className="MuiCardContent-root css-x7w97l-MuiCardContent-root"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="AttachMoneyIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.8 10.9c-2.27-.59-3-1.2-3-2.15 0-1.09 1.01-1.85 2.7-1.85 1.78 0 2.44.85 2.5 2.1h2.21c-.07-1.72-1.12-3.3-3.21-3.81V3h-3v2.16c-1.94.42-3.5 1.68-3.5 3.61 0 2.31 1.91 3.46 4.7 4.13 2.5.6 3 1.48 3 2.41 0 .69-.49 1.79-2.7 1.79-2.06 0-2.87-.92-2.98-2.1h-2.2c.12 2.19 1.76 3.42 3.68 3.83V21h3v-2.15c1.95-.37 3.5-1.5 3.5-3.55 0-2.84-2.43-3.81-4.7-4.4z"
            />
          </svg>
          <h6
            className="MuiTypography-root MuiTypography-h6 css-1ywovuw-MuiTypography-root"
          >
            Microcrédito
          </h6>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-4 MuiGrid-grid-md-3 css-1vm8tgf-MuiGrid-root"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1ckkhpr-MuiPaper-root-MuiCard-root"
      >
        <div
          className="MuiCardContent-root css-x7w97l-MuiCardContent-root"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="BusinessCenterIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 16v-1H3.01L3 19c0 1.11.89 2 2 2h14c1.11 0 2-.89 2-2v-4h-7v1h-4zm10-9h-4.01V5l-2-2h-4l-2 2v2H4c-1.1 0-2 .9-2 2v3c0 1.11.89 2 2 2h6v-2h4v2h6c1.1 0 2-.9 2-2V9c0-1.1-.9-2-2-2zm-6 0h-4V5h4v2z"
            />
          </svg>
          <h6
            className="MuiTypography-root MuiTypography-h6 css-1ywovuw-MuiTypography-root"
          >
            Trabalho
          </h6>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-4 MuiGrid-grid-md-3 css-1vm8tgf-MuiGrid-root"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1ckkhpr-MuiPaper-root-MuiCard-root"
      >
        <div
          className="MuiCardContent-root css-x7w97l-MuiCardContent-root"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ManageAccountsIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="10"
              cy="8"
              r="4"
            />
            <path
              d="M10.67 13.02c-.22-.01-.44-.02-.67-.02-2.42 0-4.68.67-6.61 1.82-.88.52-1.39 1.5-1.39 2.53V20h9.26c-.79-1.13-1.26-2.51-1.26-4 0-1.07.25-2.07.67-2.98zM20.75 16c0-.22-.03-.42-.06-.63l1.14-1.01-1-1.73-1.45.49c-.32-.27-.68-.48-1.08-.63L18 11h-2l-.3 1.49c-.4.15-.76.36-1.08.63l-1.45-.49-1 1.73 1.14 1.01c-.03.21-.06.41-.06.63s.03.42.06.63l-1.14 1.01 1 1.73 1.45-.49c.32.27.68.48 1.08.63L16 21h2l.3-1.49c.4-.15.76-.36 1.08-.63l1.45.49 1-1.73-1.14-1.01c.03-.21.06-.41.06-.63zM17 18c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
            />
          </svg>
          <h6
            className="MuiTypography-root MuiTypography-h6 css-1ywovuw-MuiTypography-root"
          >
            Estágios
          </h6>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-4 MuiGrid-grid-md-3 css-1vm8tgf-MuiGrid-root"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1ckkhpr-MuiPaper-root-MuiCard-root"
      >
        <div
          className="MuiCardContent-root css-x7w97l-MuiCardContent-root"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="PersonAddIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm-9-2V7H4v3H1v2h3v3h2v-3h3v-2H6zm9 4c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
            />
          </svg>
          <h6
            className="MuiTypography-root MuiTypography-h6 css-1ywovuw-MuiTypography-root"
          >
            Jovem Aprendiz
          </h6>
        </div>
      </div>
    </div>
  </div>
  <h4
    className="MuiTypography-root MuiTypography-h4 css-1fu4c7j-MuiTypography-root"
  >
    Serviços disponiveis
  </h4>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1fyyp8j-MuiGrid-root"
    >
      <div
        style={
          {
            "borderBottom": "1px solid #9E9E9E",
            "height": "200px",
            "marginTop": "-50px",
            "overflowY": "hidden",
            "paddingTop": "60px",
          }
        }
      >
        <div
          className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-s8yuy2-MuiPaper-root-MuiCard-root"
        >
          <div
            className="MuiBox-root css-0"
          >
            <div
              className="MuiCardHeader-root css-1ap2llq-MuiCardHeader-root"
            >
              <div
                className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
              >
                <h2
                  className="MuiTypography-root MuiTypography-h2 css-wshchc-MuiTypography-root"
                />
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root css-1wtt2ww-MuiGrid-root"
          >
            <p
              className="MuiTypography-root MuiTypography-body1 css-dbpnkx-MuiTypography-root"
            >
              Vagas de emprego
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1hljre3-MuiTypography-root"
            >
              Disponiveis em diversas áreas
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1fyyp8j-MuiGrid-root"
    >
      <div
        style={
          {
            "borderBottom": "1px solid #9E9E9E",
            "height": "200px",
            "marginTop": "-50px",
            "overflowY": "hidden",
            "paddingTop": "60px",
          }
        }
      >
        <div
          className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-s8yuy2-MuiPaper-root-MuiCard-root"
        >
          <div
            className="MuiBox-root css-0"
          >
            <div
              className="MuiCardHeader-root css-1ap2llq-MuiCardHeader-root"
            >
              <div
                className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
              >
                <h2
                  className="MuiTypography-root MuiTypography-h2 css-wshchc-MuiTypography-root"
                />
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root css-1wtt2ww-MuiGrid-root"
          >
            <p
              className="MuiTypography-root MuiTypography-body1 css-dbpnkx-MuiTypography-root"
            >
              Vagas de curso
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1hljre3-MuiTypography-root"
            >
              Disponiveis em diversas áreas
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root css-fkk637"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-testid="InfoIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
      />
    </svg>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1lh13dg-MuiTypography-root"
    >
      No caso de dúvidas e/ou problemas, acesse
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1fxugtv-MuiTypography-root-MuiLink-root"
        href="/faq"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        Perguntas Frequentes
      </a>
      . Caso o problema persista, envie e-mail para redeprogredir.senisp@cidadania.gov.br
    </p>
  </div>
</div>
`;

exports[`Teste de componentes Página de administrador renderizada corretamente 1`] = `
<div
  className="MuiContainer-root MuiContainer-maxWidthLg css-1l0w7oi-MuiContainer-root"
>
  <h5
    className="MuiTypography-root MuiTypography-h5 css-grbqxd-MuiTypography-root"
  >
    Seja bem-vindo(a)
  </h5>
  <div
    style={
      {
        "borderBottom": "1px solid #9E9E9E",
        "height": "200px",
        "marginTop": "-50px",
        "overflowY": "hidden",
        "paddingTop": "60px",
      }
    }
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-s8yuy2-MuiPaper-root-MuiCard-root"
    >
      <div
        className="MuiBox-root css-0"
      >
        <div
          className="MuiCardHeader-root css-1ap2llq-MuiCardHeader-root"
        >
          <div
            className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h2
              className="MuiTypography-root MuiTypography-h2 css-wshchc-MuiTypography-root"
            >
              Administrativo
            </h2>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root css-vj1n65-MuiGrid-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 css-dbpnkx-MuiTypography-root"
        />
        <p
          className="MuiTypography-root MuiTypography-body1 css-1hljre3-MuiTypography-root"
        />
      </div>
    </div>
  </div>
  <h4
    className="MuiTypography-root MuiTypography-h4 css-1fu4c7j-MuiTypography-root"
  >
    Visão Geral
  </h4>
  <div
    className="MuiGrid-root MuiGrid-container css-s5hy0i-MuiGrid-root"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-6z6kzq-MuiPaper-root-MuiCard-root"
    >
      <div
        className="MuiCardContent-root css-5abr63-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 css-1i08vct-MuiTypography-root"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-1xbzobo-MuiSkeleton-root"
            style={
              {
                "height": 30,
                "width": 30,
              }
            }
          />
        </p>
        <p
          className="MuiTypography-root MuiTypography-body1 css-au54wh-MuiTypography-root"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-jzr2k2-MuiSkeleton-root"
            style={
              {
                "height": 30,
                "width": 120,
              }
            }
          />
        </p>
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-6z6kzq-MuiPaper-root-MuiCard-root"
    >
      <div
        className="MuiCardContent-root css-5abr63-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 css-1i08vct-MuiTypography-root"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-1xbzobo-MuiSkeleton-root"
            style={
              {
                "height": 30,
                "width": 30,
              }
            }
          />
        </p>
        <p
          className="MuiTypography-root MuiTypography-body1 css-au54wh-MuiTypography-root"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-jzr2k2-MuiSkeleton-root"
            style={
              {
                "height": 30,
                "width": 120,
              }
            }
          />
        </p>
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-6z6kzq-MuiPaper-root-MuiCard-root"
    >
      <div
        className="MuiCardContent-root css-5abr63-MuiCardContent-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body1 css-1i08vct-MuiTypography-root"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-circular MuiSkeleton-pulse css-1xbzobo-MuiSkeleton-root"
            style={
              {
                "height": 30,
                "width": 30,
              }
            }
          />
        </p>
        <p
          className="MuiTypography-root MuiTypography-body1 css-au54wh-MuiTypography-root"
        >
          <span
            className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-jzr2k2-MuiSkeleton-root"
            style={
              {
                "height": 30,
                "width": 120,
              }
            }
          />
        </p>
      </div>
    </div>
  </div>
  <h4
    className="MuiTypography-root MuiTypography-h4 css-1fu4c7j-MuiTypography-root"
  >
    Serviços ofertados
  </h4>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-4 MuiGrid-grid-md-3 css-1vm8tgf-MuiGrid-root"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1ckkhpr-MuiPaper-root-MuiCard-root"
      >
        <div
          className="MuiCardContent-root css-x7w97l-MuiCardContent-root"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="SchoolIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3 1 9l11 6 9-4.91V17h2V9L12 3z"
            />
          </svg>
          <h6
            className="MuiTypography-root MuiTypography-h6 css-1ywovuw-MuiTypography-root"
          >
            Cursos
          </h6>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-4 MuiGrid-grid-md-3 css-1vm8tgf-MuiGrid-root"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1ckkhpr-MuiPaper-root-MuiCard-root"
      >
        <div
          className="MuiCardContent-root css-x7w97l-MuiCardContent-root"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="RocketLaunchIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M9.19 6.35c-2.04 2.29-3.44 5.58-3.57 5.89L2 10.69l4.05-4.05c.47-.47 1.15-.68 1.81-.55l1.33.26zM11.17 17s3.74-1.55 5.89-3.7c5.4-5.4 4.5-9.62 4.21-10.57-.95-.3-5.17-1.19-10.57 4.21C8.55 9.09 7 12.83 7 12.83L11.17 17zm6.48-2.19c-2.29 2.04-5.58 3.44-5.89 3.57L13.31 22l4.05-4.05c.47-.47.68-1.15.55-1.81l-.26-1.33zM9 18c0 .83-.34 1.58-.88 2.12C6.94 21.3 2 22 2 22s.7-4.94 1.88-6.12C4.42 15.34 5.17 15 6 15c1.66 0 3 1.34 3 3zm4-9c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2-2-.9-2-2z"
            />
          </svg>
          <h6
            className="MuiTypography-root MuiTypography-h6 css-1ywovuw-MuiTypography-root"
          >
            Empreendedorismo
          </h6>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-4 MuiGrid-grid-md-3 css-1vm8tgf-MuiGrid-root"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1ckkhpr-MuiPaper-root-MuiCard-root"
      >
        <div
          className="MuiCardContent-root css-x7w97l-MuiCardContent-root"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="BusinessCenterIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 16v-1H3.01L3 19c0 1.11.89 2 2 2h14c1.11 0 2-.89 2-2v-4h-7v1h-4zm10-9h-4.01V5l-2-2h-4l-2 2v2H4c-1.1 0-2 .9-2 2v3c0 1.11.89 2 2 2h6v-2h4v2h6c1.1 0 2-.9 2-2V9c0-1.1-.9-2-2-2zm-6 0h-4V5h4v2z"
            />
          </svg>
          <h6
            className="MuiTypography-root MuiTypography-h6 css-1ywovuw-MuiTypography-root"
          >
            Trabalho
          </h6>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-4 MuiGrid-grid-md-3 css-1vm8tgf-MuiGrid-root"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1ckkhpr-MuiPaper-root-MuiCard-root"
      >
        <div
          className="MuiCardContent-root css-x7w97l-MuiCardContent-root"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ManageAccountsIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="10"
              cy="8"
              r="4"
            />
            <path
              d="M10.67 13.02c-.22-.01-.44-.02-.67-.02-2.42 0-4.68.67-6.61 1.82-.88.52-1.39 1.5-1.39 2.53V20h9.26c-.79-1.13-1.26-2.51-1.26-4 0-1.07.25-2.07.67-2.98zM20.75 16c0-.22-.03-.42-.06-.63l1.14-1.01-1-1.73-1.45.49c-.32-.27-.68-.48-1.08-.63L18 11h-2l-.3 1.49c-.4.15-.76.36-1.08.63l-1.45-.49-1 1.73 1.14 1.01c-.03.21-.06.41-.06.63s.03.42.06.63l-1.14 1.01 1 1.73 1.45-.49c.32.27.68.48 1.08.63L16 21h2l.3-1.49c.4-.15.76-.36 1.08-.63l1.45.49 1-1.73-1.14-1.01c.03-.21.06-.41.06-.63zM17 18c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"
            />
          </svg>
          <h6
            className="MuiTypography-root MuiTypography-h6 css-1ywovuw-MuiTypography-root"
          >
            Estágios
          </h6>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 MuiGrid-grid-sm-4 MuiGrid-grid-md-3 css-1vm8tgf-MuiGrid-root"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1ckkhpr-MuiPaper-root-MuiCard-root"
      >
        <div
          className="MuiCardContent-root css-x7w97l-MuiCardContent-root"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="PersonAddIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm-9-2V7H4v3H1v2h3v3h2v-3h3v-2H6zm9 4c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
            />
          </svg>
          <h6
            className="MuiTypography-root MuiTypography-h6 css-1ywovuw-MuiTypography-root"
          >
            Jovem Aprendiz
          </h6>
        </div>
      </div>
    </div>
  </div>
  <h4
    className="MuiTypography-root MuiTypography-h4 css-1fu4c7j-MuiTypography-root"
  >
    Serviços disponiveis
  </h4>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1fyyp8j-MuiGrid-root"
    >
      <div
        style={
          {
            "borderBottom": "1px solid #9E9E9E",
            "height": "200px",
            "marginTop": "-50px",
            "overflowY": "hidden",
            "paddingTop": "60px",
          }
        }
      >
        <div
          className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-s8yuy2-MuiPaper-root-MuiCard-root"
        >
          <div
            className="MuiBox-root css-0"
          >
            <div
              className="MuiCardHeader-root css-1ap2llq-MuiCardHeader-root"
            >
              <div
                className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
              >
                <h2
                  className="MuiTypography-root MuiTypography-h2 css-wshchc-MuiTypography-root"
                >
                  1606
                </h2>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root css-1wtt2ww-MuiGrid-root"
          >
            <p
              className="MuiTypography-root MuiTypography-body1 css-dbpnkx-MuiTypography-root"
            >
              Vagas de emprego
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1hljre3-MuiTypography-root"
            >
              Disponiveis em diversas áreas
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-1fyyp8j-MuiGrid-root"
    >
      <div
        style={
          {
            "borderBottom": "1px solid #9E9E9E",
            "height": "200px",
            "marginTop": "-50px",
            "overflowY": "hidden",
            "paddingTop": "60px",
          }
        }
      >
        <div
          className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-s8yuy2-MuiPaper-root-MuiCard-root"
        >
          <div
            className="MuiBox-root css-0"
          >
            <div
              className="MuiCardHeader-root css-1ap2llq-MuiCardHeader-root"
            >
              <div
                className="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
              >
                <h2
                  className="MuiTypography-root MuiTypography-h2 css-wshchc-MuiTypography-root"
                >
                  33
                </h2>
              </div>
            </div>
          </div>
          <div
            className="MuiGrid-root css-1wtt2ww-MuiGrid-root"
          >
            <p
              className="MuiTypography-root MuiTypography-body1 css-dbpnkx-MuiTypography-root"
            >
              Vagas de curso
            </p>
            <p
              className="MuiTypography-root MuiTypography-body1 css-1hljre3-MuiTypography-root"
            >
              Disponiveis em diversas áreas
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root css-fkk637"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-testid="InfoIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
      />
    </svg>
    <p
      className="MuiTypography-root MuiTypography-body1 css-1lh13dg-MuiTypography-root"
    >
      No caso de dúvidas e/ou problemas, acesse
      <a
        className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1fxugtv-MuiTypography-root-MuiLink-root"
        href="/faq"
        onBlur={[Function]}
        onFocus={[Function]}
      >
        Perguntas Frequentes
      </a>
      . Caso o problema persista, envie e-mail para redeprogredir.senisp@cidadania.gov.br
    </p>
  </div>
</div>
`;
